--- a/services.html
+++ b/services.html
@@ -136,18 +136,7 @@
     <div class="service"><h2>9. Engineering Registration Board(ERB) Services</h2><span class="read-more" onclick="openModal('modal9')">Read More</span></div>
     <div class="service"><h2>10. Transportation Services</h2><span class="read-more" onclick="openModal('modal10')">Read More</span></div>
     <div class="service"><h2>11. Botswana Qualification Authority(BQA) Verification Services</h2><span class="read-more" onclick="openModal('modal11')">Read More</span></div>
-    <div class="service"><h2>12. Online OBRS Company/Business Registration/Deregistration</h2><span class="read-more" onclick="openModal('modal12')">Read More</span></div>
-    <div class="service"><h2>13. Annual Return Payments</h2><span class="read-more" onclick="openModal('modal13')">Read More</span></div>
-    <div class="service"><h2>14. Direct Shareholder Changes</h2><span class="read-more" onclick="openModal('modal14')">Read More</span></div>
-    <div class="service"><h2>15. Appointment Of Company Secretary</h2><span class="read-more" onclick="openModal('modal15')">Read More</span></div>
-    <div class="service"><h2>16. Share Certificates and Allocation</h2><span class="read-more" onclick="openModal('modal16')">Read More</span></div>
-    <div class="service"><h2>17. Bank Account Opening for Company/BUsiness</h2><span class="read-more" onclick="openModal('modal17')">Read More</span></div>
-    <div class="service"><h2>18. Bookkeeping/Account for clients</h2><span class="read-more" onclick="openModal('modal18')">Read More</span></div>
-    <div class="service"><h2>19. Financial Work/ Accounts for tax payments</h2><span class="read-more" onclick="openModal('modal19')">Read More</span></div>
-    <div class="service"><h2>20. Tax Clearance Application</h2><span class="read-more" onclick="openModal('modal20')">Read More</span></div>
-    <div class="service"><h2>21. Assistance for loans/grants at CEDA, Gender Affairs etc</h2><span class="read-more" onclick="openModal('modal21')">Read More</span></div>
-     <div class="service"><h2>22.Botswana Health Practicing Council</h2><span class="read-more" onclick="openModal('modal22')">Read More</span></div>
-
+   
     <!-- Modals for each service -->
     <div id="modal1" class="modal">
         <div class="modal-content">
@@ -172,7 +161,7 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal3')">&times;</span>
             <h2>Short Term Permits Application</h2>
-            <p>Commonly Known as emergency work permits used to for employees to come to the country to work as soon as possible and can be used as
+            <p>Commonly Known as emergency work permits used for employees to come to the country to work as soon as possible and can be used as
                 temporary permit whilst the long term work permit is in process and they range from:</p>
             <p>*One(1) day to fourteen(14) days.</p>
             <p>No Government fee required</p>
@@ -187,7 +176,7 @@
             <h2>Long Term Permits Application</h2>
             <p>This permits duration is from four(4) months to five(5) years.</p>
             <p>It's for people who are foreigners and have been employed by a local company  or their
-            companies bringing them for seccondment in Botswana.</p>
+            companies bringing them for secondment in Botswana.</p>
             <h3> Government fee :  Labour: P1500.00(</h3>
             <p>a. Labour : P1500.00</p>
             <p>b.Immigration : P1500.00</p>
@@ -198,7 +187,7 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal5')">&times;</span>
             <h2>Exemptions Applications</h2>
-            <p>They are positions of work which are exempted from permit application process e.g some investors
+            <p>They are positions of work which are exempted from permit application buut instead are issued with exemptions e.g some investors
             are exempted, so we assist in exemption applications. </p>
             <p> Government fee: P2500.00</p>
         </div>
@@ -208,7 +197,8 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal6')">&times;</span>
             <h2>VISAS Application</h2>
-            <p>We apply for VISAS for all applicants who come from countries that are required to come in using VISAS.</p>
+            <p>We assist with applying VISAS for all applicants who come to Botswana but come from countries that do not allow 
+            them to come without VISAS.</p>
             <p> Government fee: P1000.00</p>
         </div>
     </div>
@@ -217,17 +207,9 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal7')">&times;</span>
             <h2>Waivers Application</h2>
-            <p>We assist in the issuance of waivers for various permits and compliance requirements.</p>
+            <p>We assist in waiver application.</p>
             <p>Waivers are legal documents given to all people who qualify and are approved to be covered by a resident document or they
             get it to tally it with a work permit for stay in Botswana.</p>
-        </div>
-    </div>
-
-    <div id="modal8" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('modal8')">&times;</span>
-            <h2>Labour Hire Services</h2>
-            <p>We assist with the hiring of employees/workers on behalf of companies and handle all human resource function on behalf of your company.</p>
         </div>
     </div>
 
@@ -236,18 +218,10 @@
             <span class="close" onclick="closeModal('modal9')">&times;</span>
             <h2>Engineering Registration Board(ERB) Applications</h2>
             <p>We assist with registration of all diploma, degree and Masters Degree Engineers with this organization for
-            for one to practice their trade in Botswana as an engineer.</p></p>
+             one to practice their trade in Botswana as an engineer.</p></p>
             <p> Government application fee: P 7500.00</p>
             <p> Certificate fee: P2500.00</p>
             <p> Renewal fee: P2500.00</p>
-        </div>
-    </div>
-
-    <div id="modal10" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('modal10')">&times;</span>
-            <h2>Transportation Services</h2>
-            <p>We provide transportation services for organizations for their employees to and from work.</p>
         </div>
     </div>
 
@@ -255,150 +229,13 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal11')">&times;</span>
             <h2>Botswana Qualification Authority(BQA)</h2>
-            <p>We assist in the evaluation of certificates for immigrants and people
-            looking forward to work in Botswana and studied abroad to get their qualifications verified.</p>
+            <p>We assist those who want their qualifications verified.</p>
             <p>BQA iS responsible for assessing all the applicants qualifications and
             approving them so that applicants are then allowed to proceed with ERB application which is requirement for permit applications.</p>
             <p> Government fee : P2000.00</p>
         </div>
     </div>
-
-    <div id="modal12" class="modal">
-    <div class="modal-content">
-        <span class="close" onclick="closeModal('modal12')">&times;</span>
-        <h2>Online OBRS Company/Business Registration/Deregistration</h2>
-        <p>The Online Business Registration System (OBRS) allows businesses to register or deregister through an online platform provided by government agencies.</p>
-        <h3>Registration Process:</h3>
-        <ul>
-            <li><strong>Purpose:</strong> To legally establish a business entity within a jurisdiction.</li>
-        </ul>
-        <h3>Benefits of Online OBRS:</h3>
-        <ul>
-            <li><strong>Convenience & Efficiency:</strong> Allows businesses to complete registration/deregistration from anywhere at any time without needing physical visits to government offices.</li>
-            <li><strong>Real-Time Processing & Updates:</strong> Immediate feedback on application status and updates on requirements or issues encountered during processing.</li>
-        </ul>
-        <p>We therefore help companies with Online OBRS Company/Business Registration/Deregistration.</p>
-    </div>
-</div>
-
-   <div id="modal13" class="modal">
-    <div class="modal-content">
-        <span class="close" onclick="closeModal('modal13')">&times;</span>
-        <h2>Annual Return Payments</h2>
-        <p>Annual return payments refer to the fees and documentation that companies must submit to regulatory authorities, typically on a yearly basis, to maintain their legal status and compliance.</p>
-        <h3>Key Aspects:</h3>
-        <ul>
-            <li><strong>Purpose:</strong> To provide updated information about the company’s structure, financial status, and operations. This ensures transparency and accountability.</li>
-            <li><strong>Contents:</strong> Usually includes details such as company name, registration number, registered office address, directors' information, shareholder details, and financial statements.</li>
-            <li><strong>Regulatory Bodies:</strong> In many jurisdictions, this is managed by a government agency.</li>
-            <li><strong>Filing Deadlines:</strong> Companies must adhere to specific deadlines for submission; failure to do so can result in penalties or loss of good standing.</li>
-            <li><strong>Payment Structure:</strong> Fees vary based on company size or type (e.g., private vs. public) and may increase with late submissions.</li>
-        </ul>
-    </div>
-</div>
-
-    <div id="modal14" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('modal14')">&times;</span>
-            <h2>Director/Shareholder changes</h2>
-            <p>We manage all aspects related to changes in directors or shareholders within a company structure.
-                This includes resignations, appointments, or transfers of shares among existing shareholders or 
-                new investors joining the company.</p>
-            <p>Our team ensures that all necessary documentation is prepared accurately—such as board resolutions, consent
-                forms from new directors/shareholders, and updated registers—while adhering to legal requirements set forth by 
-                regulatory authorities. We also handle filings with relevant government bodies to officially record these changes, ensuring 
-                that our clients remain compliant with corporate laws while minimizing disruption to their operations.</p>
-        </div>
-    </div>
-
-    <div id="modal15" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('modal15')">&times;</span>
-            <h2>Appointment Of Company Secretary</h2>
-            <p>We offer comprehensive services for appointing a company secretary, which is a legal requirement for many businesses. 
-                Our role includes advising on the qualifications needed for this position and identifying suitable candidates who possess 
-                the necessary expertise in corporate governance.</p>
-            <p>Once a candidate is selected, we assist with formalizing their appointment through board resolutions and updating statutory
-                registers accordingly. We also provide ongoing support by ensuring compliance with regulatory obligations, 
-                such as filing annual returns and maintaining proper records of meetings and decisions made by directors.</p>
-        </div>
-    </div>
-
-    <div id="modal16" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('modal16')">&times;</span>
-            <h2>Share Certificates and Allocation</h2>
-            <p>We facilitate the issuance of share certificates to document ownership in a company. This process involves 
-                determining the appropriate number of shares to be allocated based on shareholder agreements or company bylaws.
-                We assist in drafting resolutions for share allocation and ensure compliance with relevant regulations.</p>
-            <p>We prepare share certificates that include essential details such as shareholder names, number of shares held,
-                and unique certificate numbers. We also maintain accurate records in the company's register of members to reflect these allocations accurately.
-                Additionally, we provide advice on any implications related to share transfers or changes in ownership.</p>
-        </div>
-    </div>
-
-    <div id="modal17" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('modal17')">&times;</span>
-            <h2>Bank Account Opening for Company</h2>
-            <p>We assist businesses in establishing a corporate bank account, which is essential for managing finances and facilitating transactions. 
-                Our process begins with understanding the specific banking needs of the company. We guide clients through the selection of a suitable 
-                bank that aligns with their operational requirements and offers favorable terms. </p>
-            <p>We prepare and compile all necessary documentation, including company registration documents, identification for directors and shareholders,
-                and any additional paperwork required by the bank. Our team coordinates with the bank to ensure a smooth application process, addressing any queries or concerns that may arise. 
-                Once the account is opened, we provide guidance on best practices for managing corporate finances.</p>
-        </div>
-    </div>
-
-    <div id="modal18" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('modal18')">&times;</span>
-            <h2>Bookkeeping/ Account for clients</h2>
-            <p>Our bookkeeping services are designed to help clients maintain accurate financial records effortlessly. 
-                We manage day-to-day transactions, reconcile bank statements, and prepare financial reports that provide insights into their business performance.
-                By keeping their accounts organized and up-to-date, we enable clients to make informed decisions while saving them time and reducing stress associated with financial management.</p>
-        </div>
-    </div>
-
-    <div id="modal19" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('modal19')">&times;</span>
-            <h2>Financial Work/ Accounts for tax payments</h2>
-            <p> We offer specialized financial services focused on managing accounts related to tax payments. 
-                This involves meticulous record-keeping of income and expenses, calculating tax liabilities accurately, and ensuring timely payments to avoid penalties.
-                Our expertise help clients maintain financial health while meeting their tax obligations efficiently.</p>
-        </div>
-    </div>
-
-    <div id="modal20" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('modal20')">&times;</span>
-            <h2>Tax Clearance Application</h2>
-            <p> We assist clients in obtaining tax clearance certificates, which are essential for various business transactions and compliance requirements.
-                This service includes reviewing tax obligations, ensuring all filings are up-to-date, and preparing the necessary paperwork for submission to the tax authorities. 
-                Our aim to streamline this process so that clients can focus on their core activities without worrying about tax compliance issues.</p>
-        </div>
-    </div>
-
-    <div id="modal21" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('modal21')">&times;</span>
-            <h2>Assistance for loans/grants at CEDA, Gender Affairs etc</h2>
-            <p>   We provide comprehensive support in navigating the application processes for loans and grants from organizations like CEDA (Citizen Entrepreneurial Development Agency) and Gender Affairs. 
-                This includes assessing eligibility, preparing necessary documentation, crafting compelling proposals, and guiding clients through each step to ensure a smooth submission. 
-                Our goal is to empower individuals and businesses to secure funding that aligns with their goals.</p>
-        </div>
-    </div>
-
-     <div id="modal22" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('modal22')">&times;</span>
-            <h2>Botswana Practicing Council</h2>
-            <p>For all applicants working in the health profession they must have registered and been approved by the council.</p>
-            <P>We act as an intermediary, submitting applications, following up with the council, or addressing queries on behalf of applicants.</P>
-        </div>
-    </div>
-
+    
     <script>
         function openModal(modalId) {
             document.getElementById(modalId).style.display = "block";
